--- a/client/main.css
+++ b/client/main.css
@@ -55,6 +55,9 @@
   .insideText {
       display: none;
     }
+  .mobileshow {
+    display: none;
+  }
   @media screen and (min-width: 1050px) {
     .outsideright {
       position: absolute;
@@ -75,42 +78,37 @@
     }
   }
   @media screen and (max-width: 700px) {
+    .leftdisplay {
+      display: block;
+      position: relative;
+      height: 100%;
+      width: 100%;
+    }
+    .mobilehide {
+      display: none;
+    }
+    .mobileshow {
+      display: block;
+    }
+    .inactive {
+      color: black;
+      pointer-events: none;
+      cursor: default;
+    }
+    body {
+      display: block;
+      background: none;
+      position: relative;
+      height: 100%;
+      width: 100%;
+    }
     .outsideright {
       display: none;
     }
     .outside {
       display: none;
     }
-    .leftdisplay {
-      display: none;
-    }
-    .insideText {
-      display: block;
-      padding-left: 10px;
-      padding-bottom: 20px;
-    }
-    h4 {
-      max-height: 30px;
-    }
-    .links a {
-      padding-right: 10px;
-    }
-    body {
-      overflow: hidden;
-      height: 650px;
-      width: 432px;
-      background: url('chrome-iphone6-432x882@2x.jpg');
-      background-position: 20px 20px;
-      background-size: contain;
-      background-repeat: no-repeat;
-    }
     .contain {
-      overflow: scroll;
-      position: absolute;
-      top: 96px;
-      left: 37px;
-      background-color: white;
-      max-width: 285px;
-      max-height: 505px;
+      display: none;
     }
   }
